[metadata]
name = pyamo
version = 1.0.0
author = Philipp Kewisch
author_email = mozilla@kewis.ch
url = https://github.com/kewisch/pyamo
description = Access services on addons.mozilla.org from python
long_description = file: ReadMe.md
keywords = amo, mozilla, add-ons
license = MPL-2.0
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Development Status :: 4 - Beta
	Environment :: Console
	Topic :: Utilities
	Operating System :: OS Independent
	Intended Audience :: Developers

[options]
zip_safe = True
include_package_data = True
packages = pyamo
setup_requires = setuptools_scm;
test_suite = tests.test
install_requires =
	PyFxA >= 0.4.0
	python-magic
	requests
	lxml
	mozrunner
	cssselect
	arghandler >=1.0.3
	pylzma
	pytz
	tzlocal
	python-dateutil

[options.entry_points]
console_scripts = amo = pyamo.cli:main

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]