# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
# Portions Copyright (C) Philipp Kewisch, 2021

[metadata]
name = pyamo
version = 2.2.0
author = Philipp Kewisch
author_email = mozilla@kewis.ch
description = Access reviewer services on addons.mozilla.org from python
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
keywords = amo mozilla add-ons
url = https://github.com/kewisch/pyamo
project_urls =
  Bug Tracker = https://github.com/kewisch/pyamo/issues
classifiers =
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
  Environment :: Console
  Topic :: Utilities

[options]
packages = pyamo
python_requires = >=3
install_requires =
  PyFxA >= 0.7.0
  python-magic
  requests
  lxml
  mozrunner
  cssselect
  cmp_version
  arghandler >=1.0.3
  pylzma
  pytz
  tzlocal
  python-dateutil

[options.entry_points]
console_scripts =
  amo = pyamo.cli:main
